Cambio Replay.cs por Reply.cs

--- a/EduClass.Entities/EduClass.Entities.csproj
+++ b/EduClass.Entities/EduClass.Entities.csproj
@@ -115,7 +115,7 @@
     <Compile Include="QuestionType.cs">
       <DependentUpon>EduClassModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Replay.cs">
+    <Compile Include="Reply.cs">
       <DependentUpon>EduClassModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Response.cs">
