[Entidades] - Se les asignó el tipo de dato a los atributos de las clases. [Repository] - Se agregaron las clases bases para el patron Repository, ademas se creo el metodo SignIn para Person [Services] - Se agregaron las clases bases para el patron UnitOfWork, ademas se creo el metodo SignIn para Person

--- a/EduClass.Logic/EduClass.Logic.csproj
+++ b/EduClass.Logic/EduClass.Logic.csproj
@@ -49,6 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\EntityService.cs" />
+    <Compile Include="Base\IEntityService.cs" />
+    <Compile Include="Base\IService.cs" />
+    <Compile Include="IPersonServices.cs" />
+    <Compile Include="PersonServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
