--- a/EduClass.Entities/App.config
+++ b/EduClass.Entities/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="EduClassModelContainer" connectionString="metadata=res://*/EduClassModel.csdl|res://*/EduClassModel.ssdl|res://*/EduClassModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ElDT-PC;initial catalog=dbEduclass;user id=sa;password=1qazxc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EduClassContext" connectionString="metadata=res://*/EduClassModel.csdl|res://*/EduClassModel.ssdl|res://*/EduClassModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ElDT-PC;initial catalog=dbEduclass;user id=sa;password=1qazxc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
