--- a/EduClass.Web/EduClass.Web.csproj
+++ b/EduClass.Web/EduClass.Web.csproj
@@ -48,6 +48,18 @@
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Autofac.Integration.Mvc, Version=3.3.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.Mvc5.3.3.4\lib\net45\Autofac.Integration.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="AutoMapper, Version=4.0.4.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.4.0.4\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -128,9 +140,20 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\Mappers\AutoMapperConfig.cs" />
+    <Compile Include="Infrastructure\Mappers\PersonMapperProfiles.cs" />
+    <Compile Include="Infrastructure\Modules\EntitiesModule.cs" />
+    <Compile Include="Infrastructure\Modules\RepositoryModule.cs" />
+    <Compile Include="Infrastructure\Modules\SecurityModule.cs" />
+    <Compile Include="Infrastructure\Modules\ServiceModule.cs" />
+    <Compile Include="Infrastructure\Security.cs" />
+    <Compile Include="Infrastructure\Sessions\UserSession.cs" />
+    <Compile Include="Infrastructure\ViewModels\ChangePasswordViewModel.cs" />
+    <Compile Include="Infrastructure\ViewModels\PersonViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -342,6 +365,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Menu\_menuTop.cshtml" />
     <Content Include="Views\Menu\_menuVertical.cshtml" />
+    <Content Include="Views\Users\SignIn.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -359,6 +383,10 @@
     <ProjectReference Include="..\EduClass.Logic\EduClass.Logic.csproj">
       <Project>{3f929968-6a29-4f66-959e-48b74660894c}</Project>
       <Name>EduClass.Logic</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EduClass.Repository\EduClass.Repository.csproj">
+      <Project>{2ce6207f-5d02-442b-ae49-4d28977a8015}</Project>
+      <Name>EduClass.Repository</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
