--- a/EduClass.Logic/EduClass.Logic.csproj
+++ b/EduClass.Logic/EduClass.Logic.csproj
@@ -52,9 +52,23 @@
     <Compile Include="Base\EntityService.cs" />
     <Compile Include="Base\IEntityService.cs" />
     <Compile Include="Base\IService.cs" />
+    <Compile Include="CalendarServices.cs" />
+    <Compile Include="EventServices.cs" />
+    <Compile Include="GroupServices.cs" />
+    <Compile Include="ICalendarServices.cs" />
+    <Compile Include="IEventServices.cs" />
+    <Compile Include="IGroupServices.cs" />
+    <Compile Include="IPageServices.cs" />
     <Compile Include="IPersonServices.cs" />
+    <Compile Include="IPostServices.cs" />
+    <Compile Include="IReplyServices.cs" />
+    <Compile Include="ITestServices.cs" />
+    <Compile Include="PageServices.cs" />
     <Compile Include="PersonServices.cs" />
+    <Compile Include="PostServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReplyServices.cs" />
+    <Compile Include="TestServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
