--- a/EduClass.Repository/EduClass.Repository.csproj
+++ b/EduClass.Repository/EduClass.Repository.csproj
@@ -53,9 +53,23 @@
     <Compile Include="Base\IBaseRepository.cs" />
     <Compile Include="Base\IUnitOfWork.cs" />
     <Compile Include="Base\UnitOfWork.cs" />
+    <Compile Include="CalendarRepository.cs" />
+    <Compile Include="EventRepository.cs" />
+    <Compile Include="GroupRepository.cs" />
+    <Compile Include="ICalendarRepository.cs" />
+    <Compile Include="IEventRepository.cs" />
+    <Compile Include="IGroupRepository.cs" />
+    <Compile Include="IPageRepository.cs" />
     <Compile Include="IPersonRepository.cs" />
+    <Compile Include="IPostRepository.cs" />
+    <Compile Include="IReplyRepository.cs" />
+    <Compile Include="ITestRepository.cs" />
+    <Compile Include="PageRepository.cs" />
     <Compile Include="PersonRepository.cs" />
+    <Compile Include="PostRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReplyRepository.cs" />
+    <Compile Include="TestRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
