Se agrega clase Mail y todos sus componentes. Se programa y se prueba SendEmail(aun en desarrollo)
Se agrega JoinGroup, aun en desarrollo. Sin funcionar.

--- a/EduClass.Logic/EduClass.Logic.csproj
+++ b/EduClass.Logic/EduClass.Logic.csproj
@@ -58,11 +58,13 @@
     <Compile Include="ICalendarServices.cs" />
     <Compile Include="IEventServices.cs" />
     <Compile Include="IGroupServices.cs" />
+    <Compile Include="IMailServices.cs" />
     <Compile Include="IPageServices.cs" />
     <Compile Include="IPersonServices.cs" />
     <Compile Include="IPostServices.cs" />
     <Compile Include="IReplyServices.cs" />
     <Compile Include="ITestServices.cs" />
+    <Compile Include="MailServices.cs" />
     <Compile Include="PageServices.cs" />
     <Compile Include="PersonServices.cs" />
     <Compile Include="PostServices.cs" />
