--- a/EduClass.Web/EduClass.Web.csproj
+++ b/EduClass.Web/EduClass.Web.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Controllers\CalendarController.cs" />
     <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\GroupsController.cs" />
+    <Compile Include="Controllers\MailController.cs" />
     <Compile Include="Controllers\PagesController.cs" />
     <Compile Include="Controllers\PostsController.cs" />
     <Compile Include="Controllers\ReplysController.cs" />
@@ -156,6 +157,7 @@
     <Compile Include="Infrastructure\Mappers\CalendarMapperProfiles.cs" />
     <Compile Include="Infrastructure\Mappers\EventMapperProfiles.cs" />
     <Compile Include="Infrastructure\Mappers\GroupMapperProfiles.cs" />
+    <Compile Include="Infrastructure\Mappers\MailMapperProfiles.cs" />
     <Compile Include="Infrastructure\Mappers\PageMapperProfiles.cs" />
     <Compile Include="Infrastructure\Mappers\PersonMapperProfiles.cs" />
     <Compile Include="Infrastructure\Mappers\PostMapperProfiles.cs" />
@@ -172,6 +174,7 @@
     <Compile Include="Infrastructure\ViewModels\ChangePasswordViewModel.cs" />
     <Compile Include="Infrastructure\ViewModels\EventViewModel.cs" />
     <Compile Include="Infrastructure\ViewModels\GroupViewModel.cs" />
+    <Compile Include="Infrastructure\ViewModels\MailViewModel.cs" />
     <Compile Include="Infrastructure\ViewModels\PageViewModel.cs" />
     <Compile Include="Infrastructure\ViewModels\PersonViewModel.cs" />
     <Compile Include="Infrastructure\ViewModels\PostViewModel.cs" />
@@ -387,6 +390,7 @@
     <Content Include="Views\Users\SignIn.cshtml" />
     <Content Include="Views\Users\Register.cshtml" />
     <Content Include="Views\Users\_ActivationAccount.cshtml" />
+    <Content Include="Views\Mail\SendEmail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
