Envio Mail funcionando(aun en desarrollo) Creacion de Group funcionando(aun en desarrollo) Cambios en el modelo: - Se elimina Board - Se elimina Keys - Se agrega atributo Key en Group - Se agrega atributo Posts en Group

--- a/EduClass.Web/EduClass.Web.csproj
+++ b/EduClass.Web/EduClass.Web.csproj
@@ -391,6 +391,7 @@
     <Content Include="Views\Users\Register.cshtml" />
     <Content Include="Views\Users\_ActivationAccount.cshtml" />
     <Content Include="Views\Mail\SendEmail.cshtml" />
+    <Content Include="Views\Groups\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
