--- a/EduClass.Web/EduClass.Web.csproj
+++ b/EduClass.Web/EduClass.Web.csproj
@@ -73,6 +73,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MvcPaging, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MVC4.Paging.3.1.1\lib\net40\MvcPaging.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -357,6 +361,7 @@
     <Content Include="Content\font\font_weathericons-regular-webfont.eot" />
     <Content Include="Content\font\font_weathericons-regular-webfont.ttf" />
     <Content Include="Content\font\font_weathericons-regular-webfont.woff" />
+    <Content Include="App_Code\HelperView.cshtml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -392,6 +397,9 @@
     <Content Include="Views\Users\_ActivationAccount.cshtml" />
     <Content Include="Views\Mail\SendEmail.cshtml" />
     <Content Include="Views\Groups\Create.cshtml" />
+    <Content Include="Views\Groups\JoinStudent.cshtml" />
+    <Content Include="Views\Mail\Index.cshtml" />
+    <Content Include="Views\Groups\GetContacts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
