Páginas Públicas: - Crear agregado(por ahora solo agrega la pagina al group id = 1, OJO al gol con esto) - Index agregado - .css del thumbnail agregado El index de las páginas publicas por ahora es como un Thumbnail gallery. En vez de mostrar una imagen, mostrara parte del contenido HTML de la página pública. Al darle click deberia ir al contenido completo de la página. La idea era hacer algo parecido al visor de archivos de Google Drive.
Groups
- Arreglado la Encripcion. Ahora simplemente se hace con un Guid. Y se hace substring a 8 caraceteres. Esa es la KEY del grupo.

Views
- Se corrigen los Views para que funcionen bien los dropdown
- Cambios minimos en el View del SignIn

--- a/EduClass.Web/EduClass.Web.csproj
+++ b/EduClass.Web/EduClass.Web.csproj
@@ -400,6 +400,8 @@
     <Content Include="Views\Groups\JoinStudent.cshtml" />
     <Content Include="Views\Mail\Index.cshtml" />
     <Content Include="Views\Groups\GetContacts.cshtml" />
+    <Content Include="Views\Pages\Create.cshtml" />
+    <Content Include="Views\Pages\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -442,7 +444,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>61267</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:61267/</IISUrl>
+          <IISUrl>http://localhost:55555/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
