--- a/EduClass.Web/Web.config
+++ b/EduClass.Web/Web.config
@@ -16,7 +16,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+  <add key="MvcMailer.BaseURL" value="" /></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -44,7 +44,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
@@ -76,4 +76,19 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<system.net>
+		<mailSettings>
+			<!-- Method#1: Configure smtp server credentials -->
+			<smtp from="mail.edu.class@gmail.com">
+				<network enableSsl="true" host="smtp.gmail.com" port="587" userName="mail.edu.class@gmail.com" password="Password225" />
+			</smtp>
+			
+			<!-- Method#2: Dump emails to a local directory -->
+			<!--
+			<smtp from="some-email@gmail.com" deliveryMethod="SpecifiedPickupDirectory">
+				<network host="localhost" />
+				<specifiedPickupDirectory pickupDirectoryLocation="c:\temp\"/>
+			</smtp>
+			-->
+		</mailSettings>
+	</system.net></configuration>
