--- a/EduClass.Web/packages.config
+++ b/EduClass.Web/packages.config
@@ -18,7 +18,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="MVC4.Paging" version="3.1.1" targetFramework="net452" />
+  <package id="MvcMailer" version="4.5" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
