Dropzone Incluido: - Se puede subir una imagen como perfil, temporalmente el View es SaveUploadedFiles. - Se agregan el Repository,etc para Avatar.
Usuario:
- El View del Edit esta pero no terminado.

Grupo
- Se agrega Index, Lista todos los grupos en los que esta el Teacher.

Layout
- Se cambia el Layout para que cargue el avatar y los nombres de usuario.

Otros
- Se hacen cambios minimos en Controladores, aun sin terminar.

--- a/EduClass.Logic/EduClass.Logic.csproj
+++ b/EduClass.Logic/EduClass.Logic.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AvatarServices.cs" />
     <Compile Include="Base\EntityService.cs" />
     <Compile Include="Base\IEntityService.cs" />
     <Compile Include="Base\IService.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="CalendarServices.cs" />
     <Compile Include="EventServices.cs" />
     <Compile Include="GroupServices.cs" />
+    <Compile Include="IAvatarServices.cs" />
     <Compile Include="IBoardServices.cs" />
     <Compile Include="ICalendarServices.cs" />
     <Compile Include="IEventServices.cs" />
