--- a/EduClass.Web/packages.config
+++ b/EduClass.Web/packages.config
@@ -7,6 +7,8 @@
   <package id="bootstrap" version="3.3.5" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="2.1.4" targetFramework="net452" />
+  <package id="jQuery.Fullcalendar" version="2.4.0" targetFramework="net452" />
+  <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
