Nueva entidad: File
Nuevas relaciones:
Person - File
Post - File

Nuevas vistas:
Vista de ver archivos, y subir archivos.
Aun desarrollando las funcionalidades correspondientes.

--- a/EduClass.Entities/EduClass.Entities.csproj
+++ b/EduClass.Entities/EduClass.Entities.csproj
@@ -81,6 +81,9 @@
     <Compile Include="EventType.cs">
       <DependentUpon>EduClassModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="File.cs">
+      <DependentUpon>EduClassModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Group.cs">
       <DependentUpon>EduClassModel.tt</DependentUpon>
     </Compile>
