--- a/EduClass.Logic/EduClass.Logic.csproj
+++ b/EduClass.Logic/EduClass.Logic.csproj
@@ -56,11 +56,13 @@
     <Compile Include="BoardServices.cs" />
     <Compile Include="CalendarServices.cs" />
     <Compile Include="EventServices.cs" />
+    <Compile Include="FileServices.cs" />
     <Compile Include="GroupServices.cs" />
     <Compile Include="IAvatarServices.cs" />
     <Compile Include="IBoardServices.cs" />
     <Compile Include="ICalendarServices.cs" />
     <Compile Include="IEventServices.cs" />
+    <Compile Include="IFileServices.cs" />
     <Compile Include="IGroupServices.cs" />
     <Compile Include="IMailServices.cs" />
     <Compile Include="IPageServices.cs" />
