--- a/EduClass.Web/packages.config
+++ b/EduClass.Web/packages.config
@@ -5,6 +5,8 @@
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net452" />
   <package id="AutoMapper" version="4.0.4" targetFramework="net452" />
   <package id="bootstrap" version="3.3.5" targetFramework="net452" />
+  <package id="bootstrap.less" version="3.3.5" targetFramework="net452" />
+  <package id="Bootstrap.v3.Datetimepicker" version="4.15.35.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="2.1.4" targetFramework="net452" />
   <package id="jQuery.Fullcalendar" version="2.4.0" targetFramework="net452" />
@@ -19,6 +21,7 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
+  <package id="Moment.js" version="2.11.1" targetFramework="net452" />
   <package id="MVC4.Paging" version="3.1.1" targetFramework="net452" />
   <package id="MvcMailer" version="4.5" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
