--- a/EduClass.Web/EduClass.Web.csproj
+++ b/EduClass.Web/EduClass.Web.csproj
@@ -606,6 +606,7 @@
     <Content Include="Views\FilesLibrary\Index.cshtml" />
     <Content Include="Views\FilesLibrary\UploadFile.cshtml" />
     <Content Include="Views\UserMailer\InvitedToGroup.cshtml" />
+    <Content Include="Views\Pages\ViewPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
