Agregado calificaciones y corregidos errores del Silcenced. Ademas ahora al enviar mensaje carga los miembros del grupo menos el usuario actual y ademas el Teacher.

--- a/EduClass.Entities/EduClass.Entities.csproj
+++ b/EduClass.Entities/EduClass.Entities.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Calendar.cs">
       <DependentUpon>EduClassModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Calification.cs">
+      <DependentUpon>EduClassModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="EduClassModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
