--- a/EduClass.Repository/EduClass.Repository.csproj
+++ b/EduClass.Repository/EduClass.Repository.csproj
@@ -56,12 +56,14 @@
     <Compile Include="Base\UnitOfWork.cs" />
     <Compile Include="BoardRepository.cs" />
     <Compile Include="CalendarRepository.cs" />
+    <Compile Include="CalificationRepository.cs" />
     <Compile Include="EventRepository.cs" />
     <Compile Include="FileRepository.cs" />
     <Compile Include="GroupRepository.cs" />
     <Compile Include="IAvatarRepository.cs" />
     <Compile Include="IBoardRepository.cs" />
     <Compile Include="ICalendarRepository.cs" />
+    <Compile Include="ICalificationRepository.cs" />
     <Compile Include="IEventRepository.cs" />
     <Compile Include="IFileRepository.cs" />
     <Compile Include="IGroupRepository.cs" />
