--- a/EduClass.Web/EduClass.Web.csproj
+++ b/EduClass.Web/EduClass.Web.csproj
@@ -149,6 +149,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BoardController.cs" />
     <Compile Include="Controllers\CalendarController.cs" />
+    <Compile Include="Controllers\CalificationsController.cs" />
     <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\FilesLibraryController.cs" />
     <Compile Include="Controllers\GroupsController.cs" />
@@ -164,6 +165,7 @@
     <Compile Include="Infrastructure\Helpers\EmailHelper.cs" />
     <Compile Include="Infrastructure\Mappers\AutoMapperConfig.cs" />
     <Compile Include="Infrastructure\Mappers\CalendarMapperProfiles.cs" />
+    <Compile Include="Infrastructure\Mappers\CalificationMapperProfiles.cs" />
     <Compile Include="Infrastructure\Mappers\EventMapperProfiles.cs" />
     <Compile Include="Infrastructure\Mappers\GroupMapperProfiles.cs" />
     <Compile Include="Infrastructure\Mappers\MailMapperProfiles.cs" />
@@ -180,6 +182,7 @@
     <Compile Include="Infrastructure\Sessions\MessageSession.cs" />
     <Compile Include="Infrastructure\Sessions\UserSession.cs" />
     <Compile Include="Infrastructure\ViewModels\CalendarViewModel.cs" />
+    <Compile Include="Infrastructure\ViewModels\CalificationViewModel.cs" />
     <Compile Include="Infrastructure\ViewModels\ChangePasswordViewModel.cs" />
     <Compile Include="Infrastructure\ViewModels\EventViewModel.cs" />
     <Compile Include="Infrastructure\ViewModels\GroupViewModel.cs" />
@@ -562,14 +565,18 @@
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -598,7 +605,6 @@
     <Content Include="Views\Groups\Edit.cshtml" />
     <Content Include="Views\Groups\InviteStudentByMail.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
-    <Content Include="Views\Users\SaveUploadedFile.cshtml" />
     <Content Include="Views\Users\Me.cshtml" />
     <Content Include="Views\Events\Index.cshtml" />
     <Content Include="Views\Users\ChangeAvatar.cshtml" />
@@ -612,6 +618,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\avatars\" />
+    <Folder Include="Views\Califications\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
