Arreglado Bug que borraba Avatar Default(una garcha) Cambios en el WebApi, Register funcionando.

--- a/EduClass.WebApi/Web.config
+++ b/EduClass.WebApi/Web.config
@@ -12,7 +12,9 @@
     <add name="EduClassContext" connectionString="metadata=res://*/EduClassModel.csdl|res://*/EduClassModel.ssdl|res://*/EduClassModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JVOLPE;initial catalog=dbEduclass;user id=sa;password=1qazxc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
   </connectionStrings>
-  <appSettings />
+  <appSettings>
+    <add key="ServerPath" value="C:\Users\jvolpe\Documents\Cosas\edu.class\EduClass.Web" />
+  </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
