--- a/EduClass.Web/packages.config
+++ b/EduClass.Web/packages.config
@@ -8,6 +8,7 @@
   <package id="bootstrap.less" version="3.3.5" targetFramework="net452" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.15.35.1" targetFramework="net452" />
   <package id="DotNetZip" version="1.9.8" targetFramework="net452" />
+  <package id="Dropbox.Api" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="2.1.4" targetFramework="net452" />
   <package id="jQuery.Fullcalendar" version="2.4.0" targetFramework="net452" />
