--- a/EduClass.Web/Web.config
+++ b/EduClass.Web/Web.config
@@ -7,10 +7,28 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
-    <add name="EduClassContext" connectionString="metadata=res://*/EduClassModel.csdl|res://*/EduClassModel.ssdl|res://*/EduClassModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ElDT-PC;initial catalog=dbEduclass;user id=sa;password=1qazxc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EduClassContext" connectionString="metadata=res://*/EduClassModel.csdl|res://*/EduClassModel.ssdl|res://*/EduClassModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=P02\P02;initial catalog=dbEduclass;user id=sa;password=1qazxc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+	<log4net debug="true">
+		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="Logs\\log.txt" />
+			<appendToFile value="true" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="10" />
+			<maximumFileSize value="10MB" />
+			<staticLogFile value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+			</layout>
+		</appender>
+		<root>
+			<level value="ALL" />
+			<appender-ref ref="RollingLogFileAppender" />
+		</root>
+	</log4net>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
