Muchas cosas. Todos los arreglos que habia en el archivo. Aun quedan cosas pendientes en el archivo. Se haran el los proximos dias.

--- a/EduClass.Web/Web.config
+++ b/EduClass.Web/Web.config
@@ -10,7 +10,7 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
-    <add name="EduClassContext" connectionString="metadata=res://*/EduClassModel.csdl|res://*/EduClassModel.ssdl|res://*/EduClassModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=P02\P02;initial catalog=dbEduclass;user id=sa;password=1qazxc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EduClassContext" connectionString="metadata=res://*/EduClassModel.csdl|res://*/EduClassModel.ssdl|res://*/EduClassModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FX-8320;initial catalog=dbEduclass;user id=sa;password=1qazxc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 	<log4net debug="true">
 		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
