--- a/EduClass.Web/EduClass.Web.csproj
+++ b/EduClass.Web/EduClass.Web.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Controllers\CalendarController.cs" />
     <Compile Include="Controllers\CalificationsController.cs" />
     <Compile Include="Controllers\EventsController.cs" />
+    <Compile Include="Controllers\FaqController.cs" />
     <Compile Include="Controllers\FilesLibraryController.cs" />
     <Compile Include="Controllers\GroupsController.cs" />
     <Compile Include="Controllers\MailController.cs" />
@@ -628,6 +629,7 @@
     <Content Include="Views\Pages\ViewPage.cshtml" />
     <Content Include="Views\Pages\Edit.cshtml" />
     <Content Include="Views\Califications\Index.cshtml" />
+    <Content Include="Views\Faq\ViewFaq.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
