--- a/EduClass.Repository/EduClass.Repository.csproj
+++ b/EduClass.Repository/EduClass.Repository.csproj
@@ -71,6 +71,8 @@
     <Compile Include="IPageRepository.cs" />
     <Compile Include="IPersonRepository.cs" />
     <Compile Include="IPostRepository.cs" />
+    <Compile Include="IQuestionOptionRepository.cs" />
+    <Compile Include="IQuestionRepository.cs" />
     <Compile Include="IReplyRepository.cs" />
     <Compile Include="ITestRepository.cs" />
     <Compile Include="MailRepository.cs" />
@@ -78,6 +80,8 @@
     <Compile Include="PersonRepository.cs" />
     <Compile Include="PostRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionOptionRepository.cs" />
+    <Compile Include="QuestionRepository.cs" />
     <Compile Include="ReplyRepository.cs" />
     <Compile Include="TestRepository.cs" />
   </ItemGroup>
